[package]
name = "arete"
version = "0.1.0"
edition = "2021"
description = "A security scanning tool powered by OWASP ZAP"

[lib]
name = "arete"
path = "src/lib.rs"

[[bin]]
name = "arete"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
colored = "2.1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
maud = "0.26"
url = "2.5"
indicatif = "0.18.3"

[dev-dependencies]
