[package]
name = "tsun"
version = "0.2.0"
edition = "2021"
description = "Security scanning tool powered by OWASP ZAP with Docker-managed scans, scan profiles, and CI integration"
authors = ["cWashington91"]
license = "MIT"
repository = "https://github.com/tsun-dev/tsun"
readme = "README.md"
keywords = ["security", "zap", "owasp", "scanner", "ci"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tsun"
path = "src/lib.rs"

[[bin]]
name = "tsun"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
colored = "2.1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
ctrlc = "3.4"
maud = "0.26"
url = "2.5"
indicatif = "0.18.3"
base64 = "0.21"
md5 = "0.7"

[dev-dependencies]
